--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
     <body>
         <h4>COSC2083 Group Website</h4>
-        <p> Hello World</p>
+        <p> Hello World 123</p>
     </body>
-
 </html>
