--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
     <body>
         <h4>COSC2083 Group Website</h4>
-        <p> Hello World 123</p>
+        <p> Hello World 123. Have made a few edits.</p>
     </body>
 </html>
