--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <body>
         <h4>COSC2083 Group Website</h4>
         <p>Trying something new hello world.</p>
-
+        <p>my name is sourabi baskaran</p>
     </body>
 </html>
