--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <body>
         <h4>COSC2083 Group Website</h4>
-        <p>Trying something new hello world.</p>
+        <p>Trying something new hello world.my name is sourabibaskaran</p>
 
     </body>
 </html>
