--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                         <h4>Step 1: Open a Browser and type Git download.</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/1.png" height="auto" width="1000"> 
+                                             <img src="images/1a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>Step 2:<a href="https://git-scm.com/downloads">(click Here) </a> link to the Git download  
@@ -154,32 +154,32 @@
                                                   For Mac and Linux, mostly as default it will be installed if not click on mac and follow this procedure.</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/2.png" height="auto" width="1000"> 
+                                             <img src="images/2a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>Step 3: You can also download them according to how many bits you need.</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/3.png" height="auto" width="1000"> 
+                                             <img src="images/3a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>Step 4: Installation started → Click next → save in desired folder → Click default setting → Install.</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/4.png" height="auto" width="1000"> 
+                                             <img src="images/4a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>Step 5: Please wait till it installs.</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/5.png" height="auto" width="1000"> 
+                                             <img src="images/5a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>Step 6: Open Visual Studio Code (As it is one of the common platforms for editing programming language) and type git version to check if Git has installed.
                                                   If the version appears then git has successfully installed.</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/7.png" height="auto" width="1000"> 
+                                             <img src="images/7a.png" height="auto" width="1000"> 
                                         </div>
                                                 
                                    </div>
@@ -188,13 +188,13 @@
                                              <h4>Step 1: Open a Browser and type Github.com</h4>
 
                                              <div class="tab-pane-item">
-                                                  <img src="images/8.png" height="auto" width="1000"> 
+                                                  <img src="images/8a.png" height="auto" width="1000"> 
                                              </div>
 
                                              <h4>Step 2: Pick a username → Enter Your email address → Create your password → Sign Up → Choose Your plan → Verify email address → Account successfully created.</h4>
 
                                              <div class="tab-pane-item">
-                                                  <img src="images/9.png" height="auto" width="1000"> 
+                                                  <img src="images/9a.png" height="auto" width="1000"> 
                                              </div> 
 
                                    </div>
@@ -208,7 +208,7 @@
                                         <p>Usage: git config –global user.email “{email address}”</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/14.png " height="auto" width="1000"> 
+                                             <img src="images/14a.png " height="auto" width="1000"> 
                                         </div> 
 
                                    </div>
@@ -219,7 +219,7 @@
                                    </div>
 
                                    <div class="tab-pane-item">
-                                        <img src="images/git clone.png" height="auto" width="1000"> 
+                                        <img src="images/git clone1.png" height="auto" width="1000"> 
                                    </div> 
 
                                    <div class="tab-pane-item">
@@ -227,13 +227,13 @@
                                         <p>Git add is a command used to add a particular file to the staging area before it is committed. For instance, if your workspace has 20 files, and you want to only update 3 of those files, you can use ‘git add <filename>’ to add that particular file to the staging area.</p>
 
                                              <div class="tab-pane-item">
-                                                  <img src="images/16 git add.png" height="auto" width="1000"> 
+                                                  <img src="images/16 git add1.png" height="auto" width="1000"> 
                                              </div>
 
                                         <p>If you want to add all the files to the staging area, then you can use the command ‘git add .’</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git add all.png" height="auto" width="1000"> 
+                                             <img src="images/git add all1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -244,7 +244,7 @@
                                         <p>If you want to commit the added files only (the ones you added using git add), use the command ‘git commit -a’</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git commit.png" height="auto" width="1000"> 
+                                             <img src="images/git commit1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -262,7 +262,7 @@
                                         <p>Show important information, on what branch you are on, files that are on the working conditions.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git status.png" height="auto" width="1000"> 
+                                             <img src="images/git status1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -271,7 +271,7 @@
                                         <p>This command is used to get the changes made on the repository on the local machine or server.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git pull.png" height="auto" width="1000"> 
+                                             <img src="images/git pull1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -283,13 +283,13 @@
                                         <p>Creating pull requests typically compared the source code with the update, and also the destination with that of the original code present. Typically, when working with multiple members in a team, chances are that other team members inadvertently made changes to the code. A conflict is just a notification of this mismatch in the code when you are pulling the updated files.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git conflict problem.png" height="auto" width="1000"> 
+                                             <img src="images/git conflict problem1.png" height="auto" width="1000"> 
                                         </div>
 
                                         <p>We have a conflict now, if the changes are correct the click on accept all incoming changes.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/conflict resolved.png" height="auto" width="1000"> 
+                                             <img src="images/conflict resolved1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -302,37 +302,37 @@
                                         <h4>To check on which branch we are on</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git branch check.png" height="auto" width="1000"> 
+                                             <img src="images/git branch check1.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>To add a new branch</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git branch add.png" height="auto" width="1000"> 
+                                             <img src="images/git branch add1.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>To switch between branches</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git branch switch.png" height="auto" width="1000"> 
+                                             <img src="images/git branch switch1.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>To switch branch and create a new branch</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git checkout -b ass3.png" height="auto" width="1000"> 
+                                             <img src="images/git checkout -b ass31.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>To delete a branch</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git branch delete.png" height="auto" width="1000"> 
+                                             <img src="images/git branch delete1.png" height="auto" width="1000"> 
                                         </div>
 
                                         <h4>To merge 2 branches</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git merge.png" height="auto" width="1000"> 
+                                             <img src="images/git merge before1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -344,11 +344,11 @@
                                         <p>Gitk helps visualize the commit graph and also gives information related to each commit.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/gitk.png" height="auto" width="1000"> 
+                                             <img src="images/gitk1.png" height="auto" width="1000"> 
                                         </div>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git k sheet.png" height="auto" width="1000"> 
+                                             <img src="images/git k sheet1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -357,7 +357,7 @@
                                         <p>Shows the log of all commits. The log output is present in a reverse chronological order.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git log.png" height="auto" width="1000"> 
+                                             <img src="images/git log1.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
@@ -369,17 +369,17 @@
                                         <p>Step 2: Click on the plus sign (+) near your identicon, which is on the top right corner then click New Repository.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/10.png" height="auto" width="1000"> 
+                                             <img src="images/10a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <p>Step 3: Give a repository name → Enter a short Description → Click on Initialize this repository with a README → Click on Create a repository.</p>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/11.png" height="auto" width="1000"> 
+                                             <img src="images/11a.png" height="auto" width="1000"> 
                                         </div>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/12.png" height="auto" width="1000"> 
+                                             <img src="images/12a.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
