--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                                         <h4>To merge 2 branches</h4>
 
                                         <div class="tab-pane-item">
-                                             <img src="images/git merge before1.png" height="auto" width="1000"> 
+                                             <img src="images/git merge before1.png.png" height="auto" width="1000"> 
                                         </div>
 
                                    </div>
