--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
                     <ul class="nav navbar-nav">
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#about" class="smoothScroll">Team Profile</a></li>
-                         <li><a href="#about" class="smoothScroll">Tools</a></li>
-                         <li><a href="#pricing" class="smoothScroll">Project Idea</a></li>
-                         <li><a href="#contact" class="smoothScroll">IT Technologies</a></li>
+                         <li><a href="#testimonial" class="smoothScroll">Tools</a></li>
+                         <li><a href="#pricing" class="smoothScroll">Project Idea & IT Technologies</a></li>
                          <li><a href="#contact" class="smoothScroll">IT Work</a></li>
                          <li><a href="#contact" class="smoothScroll">Feedback</a></li>
                          <li><a href="#tutorial" class="smoothScroll">Git and GitHub Tutorial</a></li>
