--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#team" class="smoothScroll">Team Profile</a></li>
                          <li><a href="#tools" class="smoothScroll">Tools</a></li>
-                         <li><a href="project idea.html" class="smoothScroll">Project Idea & IT Technologies</a></li>
+                         <li><a href="project_idea.html" class="smoothScroll">Project Idea & IT Technologies</a></li>
                          <li><a href="itwork.html" class="smoothScroll">IT Work</a></li>
                          <li><a href="feedback.html" class="smoothScroll">Feedback</a></li>
                          <li><a href="gittutorial.html">Git and GitHub Tutorial</a></li>
-
+                    </ul>
                          
 
                </div>
@@ -98,9 +98,9 @@
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-offset-4 col-md-6 col-sm-12">
+                    <div class="col-md-offset-2 col-md-9 col-sm-12">
                          <div class="section-title">
-                              <h1>Professional Team Profile</h1>
+                              <h1>Professional Team Profile and Biography</h1>
                          </div>
                     </div>
 
@@ -158,13 +158,13 @@
 
 
      <!-- TOOLS -->
-     <section id="tutorial" data-stellar-background-ratio="0.5">
+     <section id="tools" data-stellar-background-ratio="0.5">
           <div class="container">
                <div class="row">
 
                     <div class="col-md-12 col-sm-12">
                          <div class="section-title">
-                              <h1>Git and GitHub Tutorial</h1>
+                              <h1 style="color:black; text-align:center">Tools</h1>
                          </div>
                     </div>
 
