--- a/gittutorial.html
+++ b/gittutorial.html
@@ -39,7 +39,7 @@
 
 
      <!-- MENU -->
-     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
+     <section class="navbar custom-navbar1" role="navigation">
           <div class="container">
 
                <div class="navbar-header">
@@ -58,14 +58,14 @@
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                         <li><a href="index.html">Home</a></li>
-                         <li><a href="index.html" class="smoothScroll">Team Profile</a></li>
-                         <li><a href="index.html" class="smoothScroll">Tools</a></li>
-                         <li><a href="#pricing" class="smoothScroll">Project Idea & IT Technologies</a></li>
+                         <li><a href=index.html class="smoothScroll">Home</a></li>
+                         <li><a href="index.html#team" class="smoothScroll">Team Profile</a></li>
+                         <li><a href="index.html#tools" class="smoothScroll">Tools</a></li>
+                         <li><a href="project_idea.html" class="smoothScroll">Project Idea & IT Technologies</a></li>
                          <li><a href="itwork.html" class="smoothScroll">IT Work</a></li>
                          <li><a href="feedback.html" class="smoothScroll">Feedback</a></li>
-                         <li><a href="gittutorial.html" >Git and GitHub Tutorial</a></li>
-
+                         <li><a href="gittutorial.html">Git and GitHub Tutorial</a></li>
+                    </ul>
                          
 
                </div>
