--- a/project_idea.html
+++ b/project_idea.html
@@ -164,79 +164,29 @@
 
                          <div class="tab-pane" id="tab02" role="tabpanel">
                               <div class="tab-pane-item">
-                                   <h2>Git config</h2>
-                                   <p>Git config is a command that is used to set the username and email while making commits. Git config can be used only once. (Replace {name} and {email address} with any name that you want.)</p>
-                                   <p>Usage: git config –global user.name “{name}”</p>
-                                   <p>Usage: git config –global user.email “{email address}”</p>
-
-                                   <div class="tab-pane-item">
-                                        <img src="images/14a.png " height="auto" width="1000"> 
-                                   </div> 
-
+                                   <h2>Artificial intelligence</h2>
+                                   <h4>What does it do ?</h4>
+                                   <p>Artificial intelligence is a simulation of human intelligence in machines that are normally programmed to think like humans. Does artificial intelligence look like a new technology? It originated in the year 1950 and it's now picking up its importance due to the advancement in the computing power of the hardware.  It is based on highly complex mathematical models combined with systematic problem-solving. artificial intelligence has a wide variety of applications starting from Medical Aerospace, Agriculture until and virtual office assistant.</p>
+                                   <p>What are the examples of artificial intelligence are computer playing chess we might have heard of autonomous cars Humor examples in autonomous driving application of banking in particular when there is a fraudulent transaction in a credit card the artificial intelligence software recognizes this transaction based on various parameters like location of the car the spending pattern under regular point of sale so this help the bank.</p>
+                                   <p>Autonomous driving Imports from the car sensor it has to take a decision whether to break or to divert and these decisions are highly dependent on the previous information what is store and the decision-making Matrix is used in their algorithm. </p>
+                                   <p>In the case of my software artificial intelligence is used in smart decision-making to buy the software credit for the demand supply of food crops based on climatic and external factors in the world in the crop production.</p>
+                                   <p>This will not only support application software but also the mobile application in which the farmers who are having lower literacy level talk and record the contents in a very smart way. This word I want to give a complex task of handling various mobile screens and process steps. based on this we can improve the user experience of the end-user.</p>
+                                   <p>In all of the artificial intelligence applications, unlike the Hollywood films we would not be seeing flying cars robots failing cities machines to take control of human beings. it is purely a highly-capable application which can process huge amounts of data and has the capability to learn from its past experience it's a combination of neural network, deep learning, natural language processing, cognitive Computing and machine learning.</p>
                               </div>
 
                               <div class="tab-pane-item">
-                                   <h2>Git clone</h2>
-                                   <p>This command is used to get a copy of your repository on your PC.</p>
+                                   <h4>What is the likely impact?</h4>
+                                   <p>Artificial intelligence impacts the world in a highly positive way especially in my project so as a backbone off the food management software.</p>
+                                   <p>Based on the location of the software and that user details intelligently prompt the native crops map to the geographic location and games data access to the food types what is being eaten in the specific culture this intelligence will help the software to connect various producers and sellers off the food grains.</p>
+                                   <p>In the case of a food grain the shelf life is highly important and artificial intelligence pass input from various answers located in the storage lighthouses; this sensor input is used to predict the burying shelf life based on the humidity temperature and other factors which affect the quality of the food grain. </p>
                               </div>
 
                               <div class="tab-pane-item">
-                                   <img src="images/git clone1.png" height="auto" width="1000"> 
-                              </div> 
-
-                              <div class="tab-pane-item">
-                                   <h2>Git add</h2>
-                                   <p>Git add is a command used to add a particular file to the staging area before it is committed. For instance, if your workspace has 20 files, and you want to only update 3 of those files, you can use ‘git add <filename>’ to add that particular file to the staging area.</p>
-
-                                        <div class="tab-pane-item">
-                                             <img src="images/16 git add1.png" height="auto" width="1000"> 
-                                        </div>
-
-                                   <p>If you want to add all the files to the staging area, then you can use the command ‘git add .’</p>
-
-                                   <div class="tab-pane-item">
-                                        <img src="images/git add all1.png" height="auto" width="1000"> 
-                                   </div>
-
+                                   <h4>How will this affect you?</h4>
+                                   <p>Whenever the word artificial intelligence has used and discussions they always receive a mix it reaction from people who are new to this password. They always have a fear about machine taking over Humanity. this is due to the misconception of artificial intelligence. next paragraph in case artificial intelligence collection of various things in your house this will enable A Better Living I will give you an example you are busy in your work day and when you are about to leave your office in case you have less amount of food material in your refrigerator your AI program will prompt you to drop in to the nearest grocery store and this information would be fed to your refrigerator. the moment you owe near your house the lighting the air-conditioning and all other parameters would be automatically set based on your preference.</p>
+                                   <p>Coming back to our application this is going to have I totally different level of complexity and intelligence integrated into this. we Vulgate astonished in the way this program is going to communicate with different stakeholders and provide intelligent report to the application owner.  it is highly likely. Even the prices of the crops can be suggested based on the demand vs. Supply information also it can provide a forecast of shortage of food crops based on the cumulative data this can also serve as a highly reliable data for the government agencies who are responsible for managing agricultural products we would need experts in artificial intelligence to do the core program of our software based on inputs which will be analyzed using mathematical models and Arriva a binary decision of Sr know this binary decisions are summed up together to arrive at a meaning for information in form of human understandable graphics and charts or reports.</p>
                               </div>
-                              <div class="tab-pane-item">
-                                   <h2>Git commit</h2>
-                                   <p>Git commit is the command used to store a particular version of your file in the history. You can think of a git commit as a snapshot that you can always roll back or refer to later, even after making further modifications.</p>
-                                   <p>Use the command ‘git commit -m “{message}”’ to store a snapshot of the file with the specific ‘message’</p>
-                                   <p>If you want to commit the added files only (the ones you added using git add), use the command ‘git commit -a’</p>
 
-                                   <div class="tab-pane-item">
-                                        <img src="images/git commit1.png" height="auto" width="1000"> 
-                                   </div>
-
-                              </div>
-                              <div class="tab-pane-item">
-                                   <h2>Git push</h2>
-                                   <p>Git push is a command that formally sends all your commits to the remotely connected repository. For example, if you have a repository on Github that is connected via git, git push will update all the corresponding files there.</p>
-
-                                   <div class="tab-pane-item">
-                                        <img src="images/git push(full thing)1.png" height="auto" width="1000"> 
-                                   </div>
-
-                              </div>
-                              <div class="tab-pane-item">
-                                   <h2>Git status</h2>
-                                   <p>Show important information, on what branch you are on, files that are on the working conditions.</p>
-
-                                   <div class="tab-pane-item">
-                                        <img src="images/git status1.png" height="auto" width="1000"> 
-                                   </div>
-
-                              </div>
-                              <div class="tab-pane-item">
-                                   <h2>Git pull</h2>
-                                   <p>This command is used to get the changes made on the repository on the local machine or server.</p>
-
-                                   <div class="tab-pane-item">
-                                        <img src="images/git pull1.png" height="auto" width="1000"> 
-                                   </div>
-
-                              </div>
                          </div>
 
                     </div>
