--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
                          <li><a href="#home" class="smoothScroll">Home</a></li>
                          <li><a href="#team" class="smoothScroll">Team Profile</a></li>
                          <li><a href="#tools" class="smoothScroll">Tools</a></li>
-                         <li><a href="project_idea.html" class="smoothScroll">Project Idea & IT Technologies</a></li>
+                         <li><a href="project.html" class="smoothScroll">Project Idea & IT Technologies</a></li>
                          <li><a href="itwork.html" class="smoothScroll">IT Work</a></li>
                          <li><a href="feedback.html" class="smoothScroll">Feedback</a></li>
                          <li><a href="gittutorial.html">Git and GitHub Tutorial</a></li>
+
                </ul>
                          
 
