--- a/itwork.html
+++ b/itwork.html
@@ -75,15 +75,38 @@
 
 
     <!-- IT WORK -->
-    <section id="team" data-stellar-background-ratio="0.5">
-        <div class="container">
-             <div class="row">
 
+    <section id="tools" data-stellar-background-ratio="0.5">
+     <div class="container">
+          <div class="row">
 
-            </div>
-        </div>
-    </section>
+               <div class="col-md-12 col-sm-12">
+                    <div class="section-title">
+                         <h1 style="color:black; text-align:center">Tools</h1>
+                    </div>
+               </div>
 
+               <div class="tab-pane-item">
+                    <h2>Website link</h2>
+                    <p>SourabiBaskaran.github.io</p>
+               </div>
+               <div class="tab-pane-item">
+                    <iframe src="https://www.youtube.com/watch?v=7Y6GrgSJnNQ"
+                    frameborder="0" allowfullscreen></iframe>
+               </div>
+               <div class="tab-pane-item">
+                    <h2>Audit trail reflects</h2>
+                    <p>If we install the GitHub Desktop then it also has the latest version of Git. Github Desktop is just a tool for easy collaboration in Git
+                         Install Git on Windows, Mac and Linux.</p>
+                    <h4>Step 1: Open a Browser and type Git download.</h4>
+
+                    <div class="tab-pane-item">
+                         <img src="images/1a.png" height="auto" width="1000"> 
+                    </div>
+               </div>
+          </div>
+     </div>
+     </section>
 
     
      <!-- FOOTER -->
