--- a/itwork.html
+++ b/itwork.html
@@ -91,14 +91,14 @@
                     <p>SourabiBaskaran.github.io</p>
                </div>
                <div class="tab-pane-item">
-                    <iframe src="https://www.youtube.com/watch?v=7Y6GrgSJnNQ"
-                    frameborder="0" allowfullscreen></iframe>
+
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/4Xnfd7yjZrA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe>
                </div>
                <div class="tab-pane-item">
-                    <h2>Audit trail reflects</h2>
-                    <p>If we install the GitHub Desktop then it also has the latest version of Git. Github Desktop is just a tool for easy collaboration in Git
-                         Install Git on Windows, Mac and Linux.</p>
-                    <h4>Step 1: Open a Browser and type Git download.</h4>
+                    <h4>Video's transcript :-</h4>
+                    <p>Harsha (The person who gave me an interview)
+                       Sourabi (The person who took the interview)
+                    </p>
 
                     <div class="tab-pane-item">
                          <img src="images/1a.png" height="auto" width="1000"> 
