--- a/itwork.html
+++ b/itwork.html
@@ -87,8 +87,7 @@
                </div>
 
                <div class="tab-pane-item">
-                    <h2>Website link</h2>
-                    <p>SourabiBaskaran.github.io</p>
+                    <h2>Interview Vidoe</h2>
                </div>
                <div class="tab-pane-item">
 
