removing vidoe file

--- a/project.html
+++ b/project.html
@@ -88,7 +88,7 @@
                          <ul class="nav nav-tabs" role="tablist">
                               <li class="active"><a href="#tab01" aria-controls="tab01" role="tab" data-toggle="tab">Project Idea</a></li>
 
-                              <li><a href="#tab02" aria-controls="tab02" role="tab" data-toggle="tab">Install</a></li>
+                              <li><a href="#tab02" aria-controls="tab02" role="tab" data-toggle="tab">It Technologies</a></li>
                           </ul>
 
                          <div class="tab-content">
