--- a/gittutorial.html
+++ b/gittutorial.html
@@ -383,7 +383,7 @@
 
                     <div class="copyright-text col-md-12 col-sm-12">
                          <div class="col-md-6 col-sm-6">
-                              <p>Copyright &copy; 2020 Sourabi Baskaran RMIT</p>
+                              <p>Copyright &copy; 2020 Sourabi Baskaran RMIT | All rights reserved | Built using template from templatemo</p>
                          </div>
 
                          <div class="col-md-6 col-sm-6">
