--- a/index.html
+++ b/index.html
@@ -171,13 +171,28 @@
                     
                     <div class="tab-pane-item">
                          <h2>Audit trail reflects</h2>
-                         <p>If we install the GitHub Desktop then it also has the latest version of Git. Github Desktop is just a tool for easy collaboration in Git
-                              Install Git on Windows, Mac and Linux.</p>
-                         <h4>Step 1: Open a Browser and type Git download.</h4>
+                         <h4>Github is a framework that allows for easy collaboration and version management of programs. </h4>
+                         <p>For this reason, git allows for a push functionality to push code onto the cloud. This code can then be accessed by other collaborators of the project, and they can view the changes.</p>
+                         <p>The audit trail on git is good. But I mostly did not push the code too frequently on git, unless significant changes were made. The commits indicate the changes that I made. Putting in the right messages with each commit gives a much clearer picture of what I did.</p>
+                         <p>Towards the end, I did not commit every change that I made to git. As a result, the audit trail isn't perfect. The functionality, however is great, and the feature is a superb addition. Using commits and pushes in the right manner can greatly help maintain a structured audit trail.</p>
+
+                         <h4>Overview</h4>
+                         <p>I used GitHub to show the process of my work. I feel GitHub is an extremely good place to upload files and save the process. Even if we do group work it shows who all have pushed how many times. As I was not used to this system, I used to work on my Visual Studio code for hours and then when I was done I just pushed once. I hope in the future I get used to git push more often. </p>
 
                          <div class="tab-pane-item">
-                              <img src="images/1a.png" height="auto" width="1000"> 
+                              <img src="images/git push table.png" height="auto" width="800"> 
                          </div>
+
+                         <p>It shows i have only 32 contributions, i know it's very less as i mentioned the reason above i was not used to doing it push very frequently. On November 2nd is when I first opened the new repository. It took me around 1 month to build this website. When I started the webpage I had no idea about HTML,CSS and Javascript. I learnt all the basics in class and by online resources. I wish to learn more about coding as it's very interesting to me.</p>
+                         <p>In my process time I have done 6661 additions and 1074 deletions in my GitHub. I started my testing and getting adapted to using and learning coding (02-11-2020 to 16-11-2020)
+                              The i started of with my coding and creating a webpage (17-11-2020 to 19-12-2020) </p>
+
+                              <div class="tab-pane-item">
+                                   <img src="images/git addtion delection .png" height="auto" width="600"> 
+                              </div>
+
+                         <p>I feel this was a very efficient way to track processes. I will continue using this application in my future too.</p>
+     
                     </div>
                </div>
           </div>
@@ -190,7 +205,7 @@
 
                     <div class="copyright-text col-md-12 col-sm-12">
                          <div class="col-md-6 col-sm-6">
-                              <p>Copyright &copy; 2020 Sourabi Baskaran RMIT</p>
+                              <p>Copyright &copy; 2020 Sourabi Baskaran RMIT | All rights reserved | Built using template from templatemo</p>
                          </div>
 
                          <div class="col-md-6 col-sm-6">
