--- a/itwork.html
+++ b/itwork.html
@@ -40,7 +40,7 @@
 
      <!-- MENU -->
      <section class="navbar custom-navbar1" role="navigation">
-          <div class="container">
+          <div class="container"> 
 
                <div class="navbar-header">
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -80,28 +80,50 @@
      <div class="container">
           <div class="row">
 
-               <div class="col-md-12 col-sm-12">
-                    <div class="section-title">
-                         <h1 style="color:black; text-align:center">Tools</h1>
-                    </div>
-               </div>
-
                <div class="tab-pane-item">
-                    <h2>Interview Vidoe</h2>
+                    <h2>IT Work</h2>
+                    <h3>Interview Vidoe</h3>
                </div>
                <div class="tab-pane-item">
 
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/4Xnfd7yjZrA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" ></iframe>
                </div>
                <div class="tab-pane-item">
-                    <h4>Video's transcript :-</h4>
+                    <h4>Video's transcript</h4>
                     <p>Harsha (The person who gave me an interview)
                        Sourabi (The person who took the interview)
-                    </p>
+                    <p>Sourabi: Hello sir !</p>
+                    <p>Harsha: Hello !</p>
+                    <p>Sourabi: Thank you for spending your precious time with me for my interview and I am glad to have you here</p>
+                    <p>Harsha: It is my pleasure too !</p>     
+                    <p>Sourabi: I am a student from RMIT, My major is design studies but I have taken it as my general elective . So in my assignment, there is a topic related to taking an interview. My name is sourabi. Can I start with my questions?</p>
+                    <p>Harsha: yes</p>
+                    <p>Sourabi: Please tell us about your IT work and what exactly you do?</p>
+                    <p>Harsha: My name is Harsha Baskaran. I have Majored in Electronics Engineering but my work is primarily in IT. Specifically being in Web and application development. I learned these IT skills on my own because it was not a part of my curriculum. I used mostly online resources to go ahead and learn all the technologies and tactics that I will need to develop these web applications and mobile applications. In addition to this, I am a content writer and, We are working as a team in order to come up with apt solutions to tower up the brand values and also to enhance the quality of the business via good content making.</p>        
+                    <p>Sourabi: Please tell us about the industry you work in?</p>
+                    <p>Harsha: I would say the industry I work in is marketing and specifically digital marketing so web development still falls under an aspect of digital marketing in some sense and my content and other related marketing activities are also around the digital marketing category.</p>
+                    <p>Sourabi: What other kinds of work do you have?</p>
+                    <p>Harsha: So because I have a startup company which I run with a few other partners mostly the work related to IT would be the development, testing and production based tasks. In addition to that i have to also manage the finances of the company and the human resources aspects which is hiring and ensuring people are getting the best out of the jobs. I have to also do business development going and finding appropriate clients, sales and marketing to a great degree where I have to go and push our services and products to the appropriate markets.</p>
+                    <p>Sourabi: Who are all the different people do you interact within your work? Please tell us about them.</p>
+                    <p>Harsha: So if I were to go with the beginning I should start off with our clients. Clients can range from younger people who are just starting their business and to older established individuals who have had a business for many years or many decades. Individuals who have run business are also individuals who want a specific website or content for the company they are working for. Secondly I also interact with some of my employees who are mostly developers and content writers, who I kind of break down the tasks and tell them what to do.Thirdly, there is a lot of networking that goes on when trying to find and grow our business. So people who we met at various events, networking forums, online and so on. Then of course my colleagues who also specialize in certain aspects of our company.</p>
+                    <p>Sourabi: What aspect of your work do you spend most time on ? Please tell us about them</p>
+                    <p>Harsha: I think mainly for me it would be with the project planning aspects of being able to look at one world and breaking it down into simpler tasks, so that I can assign it to my appropriate teams. Finding out who specializes in what and giving them the appropriate tasks is typically where I spend a lot of my time. In Addition to that I also do a lot of development by myself, so I can expect several hours a day trying to figure out code and run different variations and ensure that everything is up and working together.</p>
+                    <p>Sourabi: Can you also tell us about other IT professionals you interact with ?</p>
+                    <p>Harsha: Some of the other IT professionals I interact with for example if we want to push a particular website for a client who already has a website then they probably have an IT team working with them.and that IT team probably specializes in certain other technologies spacts than we are used to. So I have to work with developers, data based specialists, software architectures and try to understand their system and how our applications (Web application) kind of can be deployed on their servers. So on that level I do interact with people in the same domain.</p>
+                    <p>Sourabi: Which aspects of your work do you find most challenging ?</p>
+                    <p>Harsha: I think challenging would probably be front end development because our company is more of a design focused development firm. So some of the challenging design given by the wonderful team of designers is difficult to put across on screen in certain aspects. Then all the front end elements, ensuring they work together and they scale appropriately based on mobile sizes, creating responsive design that is typically where we take a lot of time because it's difficult to make it uniform across all devices and platforms.</p>
+                    <p>Sourabi: Finally, can you share an example of the work you do best captures the essence of the IT industry?</p>
+                    <p>Harsha: For example we recently had a project for a financial firm where we had to make a web application that has a lot of design elements incorporated into it. Then we had to go through the entire project management cycle and all the way from ideation. To planning to design (where you have UI and UX design) then moving on to the next level of actual development, creating a very basic wire frame and then putting it into development and then finally also putting it into production. Deploying all the actions. That is what we have to kind of focus on.</p>
+                    <p>Sourabi: okay sir, thats it my questions are done. Thank you so much again for sharing your valuable ideas and thoughts with me.</p>
+                    <p>Sourabi:Harsha: Thank you.</p>
+                    
+                    <h3>Summary</h3>
+                    <p>An IT professional works mostly with software development. This includes both the coding aspect, as well as all aspects of management. This includes project planning and timelines, testing, quality control, and other administrative tasks.</p>
+                    <p>IT professionals mostly interact with  other IT professionals and developers. In cases where an IT professional is running a company or perhaps a manager, then they will also come in contact with clients and investors. In most cases, they will interact with software architects, designers, UI and UX designers.</p>
+                    <p>In big corporations depending on the specific role, IT professionals interact with different people. For instance, someone in the sales team will interact with a lot more clients. Someone in the business team will interact with multiple individuals, such as developers, stakeholders of the project, managers and so on.</p>
+                    <p>IT professionals spend most of their time with the development aspects itself. This includes coding, testing, deployment, and so on./p>
+                    <p>For most IT professionals, coming up with a tool that is exactly how it is envisioned by the designer is the most challenging part. Usually there are some software issues and mismatches that may take a long time to fix.</p>
 
-                    <div class="tab-pane-item">
-                         <img src="images/1a.png" height="auto" width="1000"> 
-                    </div>
                </div>
           </div>
      </div>
@@ -115,7 +137,7 @@
 
                     <div class="copyright-text col-md-12 col-sm-12">
                          <div class="col-md-6 col-sm-6">
-                              <p>Copyright &copy; 2020 Sourabi Baskaran RMIT</p>
+                              <p>Copyright &copy;2020 Sourabi Baskaran RMIT | All rights reserved | Built using template from templatemo</p>
                          </div>
 
                          <div class="col-md-6 col-sm-6">
